--- a/shell/src/index.html
+++ b/shell/src/index.html
@@ -5,6 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Module Federation Demo</title>
+  <script>
+    window.remotes = {
+      foo: 'http://localhost:3000/remoteEntry.js',
+      bar: 'http://localhost:3001/remoteEntry.js',
+    }
+  </script>
 </head>
 
 <body>
